--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="Aplikasi Administrasi Bumdes Desa Onto">
-        <meta name="keywords" content="PHP, CSS, JavaScript">
+        <meta name="keywords" content="HTML, CSS, JavaScript, PHP">
         <meta name="author" content="Kelompok 1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bumdes Desa Onto - Beranda</title>
         <link rel="stylesheet" type="text/css" href="frontend/css/w3.css">
         <link rel="stylesheet" type="text/css" href="frontend/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="frontend/css/w3color.css">
-        <link rel="icon" type="image/x-icon" href="frontend/img/logo_bumdes_desa_onto.png">
+        <link rel="icon" type="image/x-icon" href="frontend/img/icon-app.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
             html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif;}
